k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whatnot-else
  labels:
    app.kubernetes.io/name: whatnot-else
    app.kubernetes.io/part-of: whatnot-operations
