k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatnot-redis-cache
  namespace: whatnot-else
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whatnot-redis-cache
  template:
    metadata:
      labels:
        app: whatnot-redis-cache
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - node05
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: whatnot-redis-cache
  namespace: whatnot-else
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: whatnot-redis-cache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatnot-redis-queue
  namespace: whatnot-else
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whatnot-redis-queue
  template:
    metadata:
      labels:
        app: whatnot-redis-queue
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - node05
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: whatnot-redis-queue
  namespace: whatnot-else
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: whatnot-redis-queue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatnot-redis-socketio
  namespace: whatnot-else
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whatnot-redis-socketio
  template:
    metadata:
      labels:
        app: whatnot-redis-socketio
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - node05
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: whatnot-redis-socketio
  namespace: whatnot-else
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: whatnot-redis-socketio
