k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whatnot-else-route
  namespace: whatnot-else
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "whatnotelse.com"
    - "*.whatnotelse.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whatnot-frappe-web
          port: 8000
